# scenetextdetect

./: CMakeLists.txt  CMakeLists.txt~  README.md
cmake/: Dependencies.cmake  Summary.cmake  Utils.cmake
cmake/Modules/: FindNumPy.cmake
features/mser/: CMakeLists.txt  _mser.cpp
test/: test1.py
test/mnist/: custom_auto_solver.prototxt  custom_auto_test.prototxt  custom_auto_train.prototxt
test/mnist/mnist_test_lmdb/: lock.mdb
test/mnist/mnist_train_lmdb/: lock.mdb
